Add projects to the API
